force-app/main/default/objects/cf123__Comunity_Form__c/cf123__Comunity_Form__c.object-meta.xml
<CustomObject>
    <description>Indicate the forms that will be used in the Salesforce community.</description>
    <label>Community Form</label>
    <nameField>
        <label>Community Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>