force-app/main/default/objects/cf123__Comunity_Form__c/fields/cf123__OrganizationID__c.field-meta.xml
<CustomField>
    <fullName>cf123__OrganizationID__c</fullName>
    <label>OrganizationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>