force-app/main/default/objects/cf123__Comunity_Form__c/fields/cf123__Platform__c.field-meta.xml
<CustomField>
    <fullName>cf123__Platform__c</fullName>
    <label>Platform</label>
    <length>3</length>
    <type>Text</type>
</CustomField>