force-app/main/default/objects/cf123__Comunity_Form__c/listViews/cf123__All.listView-meta.xml
<ListView>
    <fullName>cf123__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>